--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
                     <img src="image/r-n-c-1.jpg" alt="">
                     <h2>Полулюкс 2-х комнатный</h2>
                     <p>Цена: 2700 руб./сутки</p>
-                    <button>Подробнее...</button>
+                    <button acti><a href="https://labirint-hotel.ru/nomera/komfort">Подробнее...</a></button>
                 </li>
                 <li class="r-nu-content">
                     <img src="image/r-n-c-2.jpg" alt="">
-                    <h2>Полулюкс 3-х местный</h3>
+                    <h2><a href="https://labirint-hotel.ru/nomera/poluluxe">Полулюкс 3-х местный</a></h3>
                         <p>Цена: 2200 руб./сутки</p>
                         <button>Подробнее...</button>
                 </li>
@@ -96,7 +96,7 @@
                     <img src="image/r-n-c-3.jpg" alt="">
                     <h2>Эконом с 2-мя раздельными кроватями</h3>
                         <p>Цена: 1700 руб./сутки</p>
-                        <button>Подробнее...</button>
+                        <button><a href="https://labirint-hotel.ru/nomera/standart-3">Подробнее...</a></button>
                 </li>
             </ul>
         </section>
