--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
                 </li>
                 <li class="r-nu-content">
                     <img src="image/r-n-c-2.jpg" alt="">
-                    <h2><a href="https://labirint-hotel.ru/nomera/poluluxe">Полулюкс 3-х местный</a></h3>
+                    <h2>Полулюкс 3-х местный</h3>
                         <p>Цена: 2200 руб./сутки</p>
-                        <button>Подробнее...</button>
+                        <button><a href="https://labirint-hotel.ru/nomera/poluluxe">Подробнее...</a></button>
                 </li>
                 <li class="r-nu-content">
                     <img src="image/r-n-c-3.jpg" alt="">
