--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
             <h1 class="content-text">Забронировать номер</h1>
             <form class="contacts-form" action="">
                 <h2 class="content-text">Забронировать онлайн</h2>
-                <input class="contacts-imput" type="text">
-                <input class="contacts-imput" type="text">
-                <input class="contacts-imput" type="text">
+                <input class="contacts-imput" type="text" placeholder="Заезд" >
+                <input class="contacts-imput" type="text"placeholder="Выезд">
+                <input class="contacts-imput" type="text" placeholder="кол-во человек">
                 <button class="contacts-button">Показать наличие</button>
             </form>
         </section>
